@@ -1,7 +1,7 @@
 .\" $Id: pkg_replace.1,v 1.2 2007/01/25 12:25:56 securedog Exp $
 .\"
-.\" Modified by Ken DEGUCHI (January 27, 2023)"
-.Dd January 27, 2023
+.\" Modified by Ken DEGUCHI (February  1, 2023)"
+.Dd February  1, 2023
 .Dt PKG_REPLACE 1
 .Os
 .Sh NAME
