@@ -1,3 +1,6 @@
+20230201
+*Replace '\ ' -> '[[:space:]]'.
+
 20230127
 *Update man page.
 
